refactor: improve project structure and fix tests
- Reorganized services into separate directories with dedicated test files

- Fixed test implementations for FileService and TranscriptionService

- Updated language code handling in transcription service

- Improved environment variable management

- Added proper error handling with Result type pattern

- Fixed all linting issues and ensured consistent code formatting

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
-# ElevenLabs API Key
+# ElevenLabs API Key (Required)
 # Get your API key from https://elevenlabs.io/
 ELEVENLABS_API_KEY=your_api_key_here
 
-# Optional: Configure input/output directories
-# INPUT_DIR=inputs
-# OUTPUT_DIR=outputs
+# Input/Output Directories (Optional)
+# Absolute or relative paths to use for input audio files and output transcriptions
+INPUT_DIR=inputs
+OUTPUT_DIR=outputs
 
-# Optional: Configure language for transcription
-# LANGUAGE=armenian
+# Language for Transcription (Optional, Default: en)
+# Use ISO language code (en, es, fr) or language name (english, spanish, french)
+LANGUAGE=en
+
+# Audio Chunk Duration in Seconds (Optional, Default: 30)
+# Smaller chunks may improve transcription accuracy but increase processing time
+CHUNK_DURATION=30
