--- a/deno.json
+++ b/deno.json
@@ -19,12 +19,13 @@
     "semiColons": false
   },
   "tasks": {
-    "start": "deno run --allow-read --allow-write --allow-net --allow-env --env-file=.env main.ts",
+    "start": "deno run --allow-read --allow-write --allow-net --allow-env --allow-run --env-file=.env main.ts",
     "lint": "deno lint",
     "fmt": "deno fmt",
     "test": "deno test --allow-read --allow-write --allow-env --env-file=.env"
   },
   "imports": {
-    "elevenlabs": "npm:elevenlabs@1.52.0"
+    "elevenlabs": "npm:elevenlabs@1.52.0",
+    "types": "./src/types/index.ts"
   }
 }
