feat: Enhance application architecture with CLI and UI modes
- Refactor main entry point to support both CLI and UI modes
- Add dynamic import for UI and CLI applications
- Implement robust process handling with signal listeners
- Update Deno tasks to support different application modes
- Improve README with comprehensive usage instructions
- Add build tasks for cross-platform executable generation
- Update .gitignore to include temporary and audiocutter directories

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ desktop.ini
 *.tmp
 *.temp
 .cache/
+temp/
 
 # Test coverage
 coverage/
@@ -54,4 +55,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Audiocutter
 .audiocutter/
+audiocutter/
