--- a/deno.json
+++ b/deno.json
@@ -20,6 +20,17 @@
   },
   "tasks": {
     "start": "deno run --allow-read --allow-write --allow-net --allow-env --allow-run --env-file=.env main.ts",
+    "start:ui": "deno run --allow-read --allow-write --allow-net --allow-env --allow-run --env-file=.env main.ts --ui",
+    "start:cli": "deno run --allow-read --allow-write --allow-net --allow-env --allow-run --env-file=.env main.ts",
+    "dev": "deno run --watch --allow-read --allow-write --allow-net --allow-env --allow-run --env-file=.env main.ts",
+    "dev:ui": "deno run --watch --allow-read --allow-write --allow-net --allow-env --allow-run --env-file=.env main.ts --ui",
+    "dev:cli": "deno run --watch --allow-read --allow-write --allow-net --allow-env --allow-run --env-file=.env main.ts",
+    "prepare:dist": "mkdir -p dist",
+    "build": "deno task prepare:dist && deno task build:macos && deno task build:windows && deno task build:linux",
+    "build:macos": "deno compile --allow-read --allow-write --allow-net --allow-env --allow-run --target x86_64-apple-darwin --output ./dist/transcriber-macos-x64 main.ts",
+    "build:macos-arm": "deno compile --allow-read --allow-write --allow-net --allow-env --allow-run --target aarch64-apple-darwin --output ./dist/transcriber-macos-arm64 main.ts",
+    "build:windows": "deno compile --allow-read --allow-write --allow-net --allow-env --allow-run --target x86_64-pc-windows-msvc --output ./dist/transcriber-windows.exe main.ts",
+    "build:linux": "deno compile --allow-read --allow-write --allow-net --allow-env --allow-run --target x86_64-unknown-linux-gnu --output ./dist/transcriber-linux main.ts",
     "lint": "deno lint",
     "fmt": "deno fmt",
     "test": "deno test --allow-read --allow-write --allow-env --env-file=.env"
