feat: Simplify UI configuration and default to Armenian language
- Remove unnecessary UI configuration options (chunk size, output location)
- Set default language to Armenian (hy)
- Automatically use Downloads folder as default output location
- Streamline UI scripts and remove redundant state management
- Update HTML and CSS to reflect simplified configuration
- Enhance language selection and default handling

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ OUTPUT_DIR=outputs
 
 # Language for Transcription (Optional, Default: en)
 # Use ISO language code (en, es, fr) or language name (english, spanish, french)
-LANGUAGE=en
+LANGUAGE=hy
 
 # Audio Chunk Duration in Seconds (Optional, Default: 30)
 # Smaller chunks may improve transcription accuracy but increase processing time
